// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movies actions should correctly create createMovie action 1`] = `
Object {
  "payload": Object {
    "budget": 200000000,
    "genres": Array [
      "Fantasy",
      "Adventure",
      "Science Fiction",
    ],
    "id": 181808,
    "overview": "Rey develops her newly discovered abilities with the guidance of Luke Skywalker, who is unsettled by the strength of her powers. Meanwhile, the Resistance prepares to do battle with the First Order.",
    "poster_path": "https://image.tmdb.org/t/p/w500/kOVEVeg59E0wsnXmF9nrh6OmWII.jpg",
    "release_date": "2017-12-13",
    "revenue": 1325937250,
    "runtime": 152,
    "tagline": "The Saga Continues",
    "title": "Star Wars: The Last Jedi",
    "vote_average": 7.1,
    "vote_count": 4732,
  },
  "type": "CREATE_MOVIE",
}
`;

exports[`Movies actions should correctly create deleteMovie action 1`] = `
Object {
  "payload": Object {
    "id": 1,
  },
  "type": "DELETE_MOVIE",
}
`;

exports[`Movies actions should correctly create fetchMovies action 1`] = `
Object {
  "payload": Object {
    "filter": Array [],
    "limit": "6",
    "offset": "6",
    "search": "My Search",
    "searchBy": "title",
    "sortBy": "vote_count",
    "sortOrder": "desc",
  },
  "type": "FETCH_MOVIES",
}
`;

exports[`Movies actions should correctly create setMovies action 1`] = `
Object {
  "payload": Array [],
  "type": "SET_MOVIES",
}
`;

exports[`Movies actions should correctly create updateMovie action 1`] = `
Object {
  "payload": Object {
    "budget": 200000000,
    "genres": Array [
      "Fantasy",
      "Adventure",
      "Science Fiction",
    ],
    "id": 181808,
    "overview": "Rey develops her newly discovered abilities with the guidance of Luke Skywalker, who is unsettled by the strength of her powers. Meanwhile, the Resistance prepares to do battle with the First Order.",
    "poster_path": "https://image.tmdb.org/t/p/w500/kOVEVeg59E0wsnXmF9nrh6OmWII.jpg",
    "release_date": "2017-12-13",
    "revenue": 1325937250,
    "runtime": 152,
    "tagline": "The Saga Continues",
    "title": "Star Wars: The Last Jedi",
    "vote_average": 7.1,
    "vote_count": 4732,
  },
  "type": "UPDATE_MOVIE",
}
`;
